style: Ajuste de estilo

--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -14,8 +14,8 @@
             </nav>
         </header>
         <main>
-            <section class="bg-gradient-to-b from-verde from-80% to-white to-20% pt-16 mb-32">
-                <div class="conteudo grid-cols-2 p-12 rounded bg-agro-2 bg-cover bg-center relative">
+            <section class="bg-gradient-to-b from-verde from-80% to-neutral-100 to-20% pt-16 pb-40">
+                <div class="conteudo grid-cols-2 p-12 rounded-xl bg-agro-2 bg-cover bg-center relative">
                     <span class="z-30">
                         <p class="text-white m-0 text-xl font-black mb-4 2xl:text-2xl">LOCAÇÃO DE SISTEMAS FOTOVOLTAICOS: A FAVOR DO MEIO AMBIENTE E DO SEU BOLSO</p>
                         <p class="text-white m-0 text-sm font-extrabold 2xl:text-base">Precisa reduzir a conta de luz da sua empresa e otimizar investimentos?</p>
@@ -24,29 +24,29 @@
                     </span>
                     <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-0 -top-0 2xl:scale-50 2xl:-top-24" src="../assets/img/placa-solar-transparente.png">
                     <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-8 -top-8 2xl:scale-50 2xl:-top-32" src="../assets/img/placa-solar-transparente.png">
-                    <div class="absolute z-20 rounded top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
+                    <div class="absolute z-20 rounded-xl top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
                 </div>
             </section>
-            <section class="py-20">
+            <section class="py-12 bg-neutral-100 pt-32">
                 <div class="conteudo grid-cols-5">
                     <div class="col-span-3">
-                        <p class="text-xl mb-8 text-verde-escuro font-extrabold 2xl:text-2xl">Economize com energia solar enquanto conquista ganhos financeiros significativos.</p>
+                        <p class="text-2xl mb-8 text-verde-escuro font-extrabold 2xl:text-2xl">Economize com energia solar enquanto conquista ganhos financeiros significativos.</p>
                         <p class="text-sm 2xl:text-base">Com a Agro&Solar, você conta com um modelo de locação inovador: cuidamos de todo o processo –  da instalação à manutenção dos sistemas fotovoltaicos –, sem custo inicial para o seu negócio.</p>
                         <p class="text-sm 2xl:text-base">Como os equipamentos são fornecidos por nós, você pode usufruir dos benefícios da energia solar sem necessidade de compra.</p>
                         <p class="text-sm 2xl:text-base">Tudo de acordo com as normas da ANEEL (Agência Nacional de Energia Elétrica), garantindo conformidade e segurança. E o melhor: os sistemas fotovoltaicos promovem a sustentabilidade do planeta, reduzindo a pegada de carbono da sua operação.</p>
                     </div>
                     <div class="col-span-2">
-                        <img src="../assets/img/sobre-2.jpg" class="aspect-square object-cover rounded" alt="">
+                        <img src="../assets/img/business-person-planning-alternative-energies.jpg" class="aspect-square object-cover rounded shadow-md" alt="">
                     </div>
                 </div>
             </section>
-            <section class="py-20">
+            <section class="py-20 bg-neutral-100">
                 <div class="conteudo grid-cols-5">
                     <div class="col-span-2">
-                        <img src="../assets/img/sobre-2.jpg" class="aspect-square object-cover rounded" alt="">
+                        <img src="../assets/img/foreman-businessman-solar-energy-station.jpg" class="aspect-square object-cover object-right rounded shadow-md" alt="">
                     </div>
                     <div class="col-span-3">
-                        <p class="text-xl mb-8 text-verde-escuro font-extrabold 2xl:text-2xl">Tenha um retorno financeiro estável e previsível com a locação de energia solar.</p>
+                        <p class="text-2xl mb-8 text-verde-escuro font-extrabold 2xl:text-2xl">Tenha um retorno financeiro estável e previsível com a locação de energia solar.</p>
                         <p class="text-sm 2xl:text-base">Como a taxa mensal cobrada pela locação de energia solar é geralmente menor do que o custo da energia elétrica fornecida pela rede pública de distribuição de energia, você pode esperar receber um fluxo constante de receita ao longo do contrato de locação.</p>
                         <p class="text-sm 2xl:text-base">Isso permite que você aproveite uma redução imediata na sua conta de energia e benefícios financeiros a longo prazo.</p>
                         <p class="text-sm 2xl:text-base">Tem interesse em alugar energia solar?</p>
@@ -54,13 +54,13 @@
                     </div>
                 </div>
             </section>
-            <section class="py-20">
-                <p class="conteudo text-xl mb-8 text-verde-escuro font-extrabold text-center 2xl:text-2xl">Por que escolher a locação de sistemas da Agro&Solar?</p>
-                <div class="conteudo grid-cols-3">
-                    <div>
-                        <img src="../assets/img/sobre-2.jpg" class="h-full object-cover rounded scale-y-75 shadow" alt="">
+            <section class="py-28">
+                <p class="conteudo text-3xl mb-16 text-verde-escuro font-extrabold text-center 2xl:text-2xl">Por que escolher a locação de<br>sistemas da Agro&Solar?</p>
+                <div class="conteudo grid-cols-5">
+                    <div class="col-span-2">
+                        <img src="../assets/img/side-view-engineer-drawing-plan-outdoors.jpg" class="h-full object-cover rounded shadow" alt="">
                     </div>
-                    <div class="conteudo col-span-2 w-full gap-4 grid-cols-2">
+                    <div class="conteudo col-span-3 w-full gap-4 grid-cols-2">
                         <div class="box-lp-diferenciais">
                             <span class="box-lp-icone">
                                 <iconify-icon icon="lucide:house-plug"></iconify-icon>
@@ -126,58 +126,74 @@
                         </div>
                     </div>
                 </div>
-                <div class="conteudo mt-12 bg-neutral-100 p-8 rounded-lg">
+                <div class="conteudo bg-neutral-100 p-8 rounded-lg mt-16">
                     <span class="flex justify-between items-center">
                         <p class="text-lg m-0">Tem interesse em alugar energia solar?</p>
                         <button class="btn bg-verde text-neutral-800 font-extrabold">Solicitar Análise</button>
                     </span>
                 </div>
             </section>
-            <section class="py-20">
+            <section class="py-20 bg-gradient-to-b from-verde to-verde-escuro">
                 <div class="conteudo gap-12">
-                    <span class="flex bg-agro-2 bg-cover bg-center p-8 rounded relative">
+                    <span class="flex bg-agro-2 bg-cover bg-center p-16 rounded-xl relative overflow-hidden">
                         <p class="z-20 text-3xl w-1/2 text-white font-extrabold my-16">Entenda como você começa a poupar desde a primeira conta.</p>
                         <div class="z-10 absolute rounded top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
                     </span>
-                    <span class="">
-                        <p class="text-xl font-extrabold m-0">EXEMPLO: Empresa com Gastos de R$ 12.000 Mensais em Energia</p>
+                    <span class="my-4 text-left border-2 border-white rounded-xl p-12">
+                        <p class="text-xl font-extrabold m-0 mb-6 text-white">EXEMPLO:<br>Empresa com Gastos de R$ 12.000 Mensais em Energia</p>
                         <ul>
-                            <li class="list-disc ml-8 m-0 text-sm font-semibold 2xl:text-base">Cenário Inicial: gasto mensal de R$ 12.000 (R$ 144.000 por ano) com eletricidade.</li>
-                            <li class="list-disc ml-8 m-0 text-sm font-semibold 2xl:text-base">Modelo de Locação: a empresa contrata o serviço de locação de energia solar sem custos iniciais de instalação.</li>
+                            <li class="list-disc ml-8 my-4 text-sm font-semibold 2xl:text-base"><strong>Cenário Inicial:</strong> gasto mensal de <strong class="">R$ 12.000 (R$ 144.000 por ano)</strong> com eletricidade.</li>
+                            <li class="list-disc ml-8 my-4 text-sm font-semibold 2xl:text-base"><strong>Modelo de Locação:</strong> a empresa contrata o serviço de locação de energia solar sem custos iniciais de instalação.</li>
                         </ul>
                     </span>
                     <span class="mb-8">
-                        <div class="conteudo w-full grid-cols-2 gap-y-8 gap-x-16">
-                            <p class="col-span-2 text-xl font-extrabold m-0">Benefícios da Locação</p>
-                            <div class="flex flex-col">
-                                <p class="text-sm mb-2 text-verde-escuro font-extrabold 2xl:text-base">1. Redução Imediata na Conta de Luz:</p>
-                                <ul class="ml-8">
-                                    <li class="list-disc m-0 text-sm 2xl:text-base">Economia anual estimada: R$ 24.000 (cerca de 20% do valor gasto).</li>
-                                    <li class="list-disc m-0 text-sm 2xl:text-base">Após 20 anos, economia acumulada sem correção: R$ 480.000.</li>
-                                </ul>
+                        <div class="conteudo w-full grid-cols-4 gap-6">
+                            <p class="col-span-4 text-3xl font-extrabold text-white">Benefícios da Locação</p>
+                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-8 relative">
+                                <span class="absolute flex -top-3 -left-3 aspect-square bg-azul rounded-full w-10 items-center justify-center">
+                                    <p class="m-auto font-extrabold text-white text-xl">1</p>
+                                </span>
+                                <p class="text-base mb-6 text-neutral-800 font-extrabold">Redução imediata na conta de luz:</p>
+                                <p class="m-0 text-xs mb-4">Economia anual estimada: R$ 24.000 (cerca de 20% do valor gasto).</p>
+                                <p class="m-0 text-xs mb-4">Após 20 anos, economia acumulada sem correção: R$ 480.000.</p>
                             </div>
-                            <div class="flex flex-col">
-                                <p class="text-sm mb-2 text-verde-escuro font-extrabold 2xl:text-base">2. Investimento Sustentável:</p>
-                                <ul class="ml-4">
-                                    <li class="list-disc m-0 text-sm 2xl:text-base">Redução significativa da dependência de energia de fontes não renováveis.</li>
-                                    <li class="list-disc m-0 text-sm 2xl:text-base">Contribuição para a sustentabilidade e diminuição da pegada de carbono.</li>
-                                </ul>
+                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-8 relative">
+                                <span class="absolute flex -top-3 -left-3 aspect-square bg-azul rounded-full w-10 items-center justify-center">
+                                    <p class="m-auto font-extrabold text-white text-xl">2</p>
+                                </span>
+                                <p class="text-base mb-6 text-neutral-800 font-extrabold">Investimento Sustentável:</p>
+                                <p class="m-0 text-xs mb-4">Redução significativa da dependência de energia de fontes não renováveis.</p>
+                                <p class="m-0 text-xs mb-4">Contribuição para a sustentabilidade e diminuição da pegada de carbono.</p>
                             </div>
-                            <div class="flex flex-col">
-                                <p class="text-sm mb-2 text-verde-escuro font-extrabold 2xl:text-base">3. Facilidade na Gestão:</p>
-                                <ul class="ml-4">
-                                    <li class="list-disc m-0 text-sm 2xl:text-base">Sem custos de manutenção ou substituição de equipamentos.</li>
-                                    <li class="list-disc m-0 text-sm 2xl:text-base">A empresa fornecedora cuida de toda a documentação e suporte técnico.</li>
-                                </ul>
+                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-8 relative">
+                                <span class="absolute flex -top-3 -left-3 aspect-square bg-azul rounded-full w-10 items-center justify-center">
+                                    <p class="m-auto font-extrabold text-white text-xl">3</p>
+                                </span>
+                                <p class="text-base mb-6 text-neutral-800 font-extrabold">Facilidade na Gestão:</p>
+                                <p class="m-0 text-xs mb-4">Sem custos de manutenção ou substituição de equipamentos.</p>
+                                <p class="m-0 text-xs mb-4">A empresa fornecedora cuida de toda a documentação e suporte técnico.</p>
                             </div>
-                            <div class="flex flex-col">
-                                <p class="text-sm mb-2 text-verde-escuro font-extrabold 2xl:text-base">4. Economia Acumulada com Correção (1% ao mês):</p>
-                                <ul class="ml-4">
-                                    <li class="list-disc m-0 text-sm 2xl:text-base">Com os valores economizados aplicados a 12% ao  ano, o montante pode ultrapassar R$ 356.000  ao longo de 20 anos, proporcionando um lucro significativo além da economia nas contas de luz.</li>
-                                </ul>
+                            <div class="flex flex-col bg-neutral-100 rounded-lg shadow-lg p-8 relative">
+                                <span class="absolute flex -top-3 -left-3 aspect-square bg-azul rounded-full w-10 items-center justify-center">
+                                    <p class="m-auto font-extrabold text-white text-xl">4</p>
+                                </span>
+                                <p class="text-base mb-6 text-neutral-800 font-extrabold">Economia Acumulada com Correção<br>(1% ao mês):</p>
+                                <p class="m-0 text-xs mb-4">Com os valores economizados aplicados a 12% ao  ano, o montante pode ultrapassar R$ 356.000  ao longo de 20 anos, proporcionando um lucro significativo além da economia nas contas de luz.</p>
                             </div>
                         </div>
                     </span>
+                </div>
+            </section>
+            <section class="py-20 bg-paineis-campo bg-cover bg-center relative">
+                <div class="conteudo grid-cols-5">
+                    <span class="col-span-3"></span>
+                    <span class="col-span-2 z-30 bg-neutral-50 rounded-lg px-12 py-20 flex flex-col items-center">
+                        <p class="text-center m-0 text-xl font-black mb-4 4xl:text-2xl">Sua empresa está pronta para transformar a energia em economia?</p>
+                        <p class="text-center text-sm mb-8">Fale com nossos especialistas e invista no futuro do seu negócio e do planeta.</p>
+                        <button class="w-2/3 border border-neutral-300 rounded-full p-2 text-sm m-1">WhatsApp</button>
+                        <button class="w-2/3 border border-neutral-300 rounded-full p-2 text-sm m-1">Ligação</button>
+                    </span>
+                    <div class="absolute z-20 top-0 left-0 h-full w-full bg-[#000000a1]"></div>
                 </div>
             </section>
         </main>
