feat: Sistema de cotação de locação
- arquivo economiaConta.ts adicionado em /helpers
    variavel economiaConta e interface Conta

--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -193,6 +193,65 @@
                     </span>
                 </div>
             </section>
+            <section class="py-20">
+                <div class="conteudo">
+                    Ajuste
+                    <input type="range" name="" id="range-conta" value="0" min="0" max="20000" step="500">
+                    <p id="valor-range"></p>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>CONTA (Mensal)</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>CONSUMO (KWh/mês)</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>COMPRA (Invest.)</td>
+                                <td></td>
+                            </tr>                            
+                            <tr>
+                                <td>Ano 01</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Ano 02</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Ano 03</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Ano 04</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Ano 05</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Ano 06</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Ano 07 até ano 20</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>GANHO TOTAL S/ APLICAÇÃO</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>GANHO TOTAL C/ APLICAÇÃO (12% Real/Ano)</td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
             <section class="py-20 bg-paineis-campo bg-cover bg-center relative">
                 <div class="conteudo grid-cols-5">
                     <span class="col-span-3"></span>
@@ -210,5 +269,6 @@
 
         </footer>
         <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
+        <script src="../index.ts"></script>
     </body>
 </html>
