--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <title>Agro&Solar</title>
     </head>
     <body>
-        <header id="banner" class="sessao z-20 w-full overflow-hidden relative bg-img-banner bg-cover bg-center justify-end lg:h-dvh lg:max-h-dvh">
+        <header id="banner" class="sessao z-20 w-full overflow-hidden relative bg-img-banner bg-cover bg-center justify-center lg:h-dvh lg:max-h-dvh">
             <nav id="nav-logo" class="z-50 flex absolute top-0 w-full items-center min-h-20">
                 <div class="flex mx-auto justify-between w-5/6 lg:w-8/12">
                     <!--<img class="h-14 col-span-2" src="./assets/img/logo-agro-e-solar-2.png" loading="lazy" alt="">-->
@@ -43,9 +43,9 @@
                 <li class="list-none p-4"><a class="fechar-menu" href="#equipe">Equipe</a></li>
                 <li class="list-none p-4"><a class="fechar-menu" href="#contato">Fale Conosco</a></li>
             </div>
-            <div class="coluna w-10/12 text-branco z-20 h-fit mx-auto">
+            <div class="coluna w-10/12 text-branco z-20 mx-auto">
                 <div class="coluna items-center justify-center mb-12">
-                    <img class="w-4/6 mb-6 img-sombra lg:w-4/12" src="./assets/img/logo-agro-e-solar-4.png" loading="lazy" alt="">
+                    <img class="w-3/6 mb-6 img-sombra lg:w-4/12" src="./assets/img/logo-agro-e-solar-4.png" loading="lazy" alt="">
                     <h1 class="mb-2 text-center lg:w-2/3">Transforme a Luz do Sol em Economia</h1>
                     <p class="m-0 text-xs text-center lg:w-2/3 lg:text-sm">Reduza custos e potencialize seu negócio com soluções inteligentes. Transforme a luz do sol em economia significativa e uma operação mais ecológica, garantindo não apenas um futuro mais verde, mas também um presente mais eficiente e lucrativo.</p>
                 </div>
@@ -108,12 +108,12 @@
             </a>
             <section class="sessao bg-cinza-claro-2 relative overflow-hidden">
                 <span id="agrifotovoltaico" class="absolute -top-8"></span>
-                <container class="conteudo lg:grid-cols-2">
-                    <div class="relative">
+                <container class="conteudo lg:grid-cols-5">
+                    <div class="relative col-span-2">
                         <img src="./assets/img/engenheiro-com-placas.jpg" loading="lazy" alt="" class="aspect-square scale-90 rounded-lg object-cover lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
                         <iconify-icon icon="lucide:chevrons-left" class="z-30 top-0 -right-8 text-9xl text-verde absolute"></iconify-icon>
                     </div>
-                    <div class="coluna justify-center mt-8 lg:mt-0">
+                    <div class="coluna col-span-3 justify-center mt-8 lg:mt-0">
                         <h2>Agrifotovoltaico</h2>
                         <h3 class="text-azul font-extrabold">Gerando inovação para os mercados que utilizam painéis fotovoltaicos</h3>
                         <div class="mb-8">
@@ -289,11 +289,11 @@
             </section>
             <section class="sessao">
                 <span id="locacao" class="absolute -top-8"></span>
-                <container class="conteudo lg:grid-cols-2">
-                    <div>
+                <container class="conteudo lg:grid-cols-5">
+                    <div class="col-span-2">
                         <img src="./assets/img/Projeto Smart Leme_3.jpg" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
                     </div>
-                    <div class="coluna justify-center">
+                    <div class="coluna justify-center col-span-3">
                         <h2 class="flex items-center">
                             <iconify-icon icon="lucide:grid-3x3" class="mr-4"></iconify-icon>
                             Locação de Sistemas
@@ -310,7 +310,7 @@
                             </ul>
                         </strong>
                     </div>
-                    <div id="tabela-investmento" class="overflow-x-scroll lg:overflow-x-auto lg:mt-16 lg:col-span-2">
+                    <div id="tabela-investmento" class="overflow-x-scroll lg:overflow-x-auto lg:mt-16 lg:col-span-5">
                         <h3 class="mx-auto w-full text-center mt-16">ECONOMIA NAS CONTAS DE ELETRICIDADE SE 1kW = R$ 1,00 (em R$)</h3>
                         <div class="w-full flex">
                             <table class="w-full" cellspacing="0" cellpadding="5">
@@ -675,8 +675,8 @@
             </section>
             <section class="sessao">
                 <span id="grandes-projetos" class="absolute -top-8"></span>
-                <container class="conteudo lg:grid-cols-2">
-                    <div class="coluna justify-center">
+                <container class="conteudo lg:grid-cols-5">
+                    <div class="coluna justify-center lg:col-span-3">
                         <h2 class="flex items-center">
                             <iconify-icon icon="lucide:building-2" class="mr-4"></iconify-icon>
                             Grandes Projetos
@@ -684,18 +684,18 @@
                         <p>Oferecemos projetos completos que incluem estudos topográficos, parecer de acesso, opções de financiamento e autorização com órgãos regionais. Trabalhamos com a abordagem 'turnkey', onde cuidamos de todas as etapas do projeto, desde a concepção até a execução, garantindo que você tenha uma solução pronta para uso. Além disso, analisamos investimentos e retornos para garantir a melhor solução para você.</p>
                         <!--<p>A Lupo é uma renomada fábrica brasileira especializada em meias, cuecas e roupas íntimas, reconhecida pela qualidade e inovação em seus produtos. Com sede no interior de São Paulo, a empresa tem se destacado no mercado nacional e internacional, priorizando sustentabilidade e eficiência em suas operações. Ao adotar soluções como sistemas agrifotovoltaicos, empresas como a Lupo podem reduzir custos com energia e reforçar seu compromisso com práticas ambientais responsáveis.</p>-->
                     </div>
-                    <div>
+                    <div class="lg:col-span-2">
                         <img src="./assets/img/grande-projetos.png" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:20px 20px 0 #B3DE00;">
                     </div>
                 </container>
             </section>
             <section class="sessao">
                 <span id="seu-projeto" class="absolute -top-8"></span>
-                <container class="conteudo flex flex-col-reverse lg:grid-cols-2 lg:grid">
-                    <div>
+                <container class="conteudo flex flex-col-reverse lg:grid-cols-5 lg:grid">
+                    <div class="lg:col-span-2">
                         <img src="./assets/img/pequeno-projetos.png" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
                     </div>
-                    <div class="coluna justify-center">
+                    <div class="coluna justify-center lg:col-span-3">
                         <h2 class="flex items-top">
                             <iconify-icon icon="lucide:house" class="mr-4"></iconify-icon>
                             O Seu Projeto
