--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -195,58 +195,57 @@
             </section>
             <section class="py-20">
                 <div class="conteudo">
-                    Ajuste
-                    <input type="range" name="" id="range-conta" value="0" min="0" max="20000" step="500">
+                    <input type="range" name="" id="range-conta" value="0" min="0" max="20000" step="1000">
                     <p id="valor-range"></p>
                     <table>
                         <tbody>
                             <tr>
                                 <td>CONTA (Mensal)</td>
-                                <td></td>
+                                <td id="conta-mensal" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
                                 <td>CONSUMO (KWh/mês)</td>
-                                <td></td>
+                                <td id="consumo" class="tab-orcamento-valores">0 kWh</td>
                             </tr>
                             <tr>
                                 <td>COMPRA (Invest.)</td>
-                                <td></td>
+                                <td id="compra" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>                            
                             <tr>
-                                <td>Ano 01</td>
-                                <td></td>
+                                <td>Economia no Ano 01</td>
+                                <td id="ano-01" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Ano 02</td>
-                                <td></td>
+                                <td>Economia no Ano 02</td>
+                                <td id="ano-02" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Ano 03</td>
-                                <td></td>
+                                <td>Economia no Ano 03</td>
+                                <td id="ano-03" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Ano 04</td>
-                                <td></td>
+                                <td>Economia no Ano 04</td>
+                                <td id="ano-04" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Ano 05</td>
-                                <td></td>
+                                <td>Economia no Ano 05</td>
+                                <td id="ano-05" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Ano 06</td>
-                                <td></td>
+                                <td>Economia no Ano 06</td>
+                                <td id="ano-06" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
-                                <td>Ano 07 até ano 20</td>
-                                <td></td>
+                                <td>Economia no Ano 07 até ano 20</td>
+                                <td id="ano-07" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
                                 <td>GANHO TOTAL S/ APLICAÇÃO</td>
-                                <td></td>
+                                <td id="ganho-sem-aplic" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                             <tr>
                                 <td>GANHO TOTAL C/ APLICAÇÃO (12% Real/Ano)</td>
-                                <td></td>
+                                <td id="ganho-com-aplic" class="tab-orcamento-valores">R$ 0,00</td>
                             </tr>
                         </tbody>
                     </table>
