style: Estilo CSS Landing-Page definido

--- a/src/lp/locacao.html
+++ b/src/lp/locacao.html
@@ -10,124 +10,131 @@
     <body>
         <header></header>
         <main>
-            <section class="bg-neutral-800 py-16">
+            <section class="bg-neutral-800 py-16 lp-back">
                 <div class="conteudo">
-                    <span class="flex justify-center flex-col h-96">
-                        <h1 class="font-extrabold text-neutral-100 text-5xl">Compramos sua conta<br>de energia</h1>
+                    <span class="flex justify-center flex-col h-60">
+                        <h1 class="font-extrabold text-neutral-100 text-6xl uppercase">Compramos sua conta<br>de energia</h1>
                     </span>
                 </div>
             </section>
-            <section class="py-24">
+            <section class="py-20 lp-banner">
                 <div class="conteudo grid-cols-5">
-                    <div class="col-span-3">
-                        <h2>Comece com a economia de 20% ao ano e aumenta para 50%</h2>
-                        <h2>Veja: Uma conta de R$ 1.000 pode te dar uma economia de R$ 356.358</h2>
+                    <div class="col-span-3 flex flex-col justify-center pr-16">
+                        <img class="w-72 mb-6" src="../assets/img/logo-agro-e-solar-5.png" alt="">
+                        <p class="text-3xl font-extrabold uppercase leading-10 text-azul">Comece com a economia de 20% ao ano e aumenta para 50%</p>
+                        <p class="text-xl uppercase text-neutral-400"><strong>Veja:</strong> Uma conta de <strong>R$ 1.000</strong> pode te dar uma economia de <strong>R$ 356.358</strong></p>
+                        <button class="btn w-80 mt-12 text-xl shadow-md rounded-lg bg-verde text-branco font-extrabold">Quero economizar</button>
                     </div>
-                    <img src="../assets/img/pequeno-projetos.png" alt="" class="rounded-lg col-span-2">
+                    <img src="../assets/img/pequeno-projetos.png" alt="" class="rounded-lg col-span-2" style="box-shadow:-20px 20px 0 #B3DE00">
                 </div>
             </section>
-            <section class="py-4">
-                <div class="conteudo grid-cols-2 w-1/3">
-                    <img class="h-full" src="../assets/img/logo-agro-e-solar-5.png" alt="">
-                    <button class="btn text-lg rounded-lg bg-verde">Quero economizar</button>
-                </div>
-            </section>
-            <section class="py-24">
+            <section class="py-20 bg-neutral-100">
                 <div class="conteudo grid-cols-3">
-                    <h2 class="col-span-3 text-center">Veja o quanto você pode economizar:</h2>
-                    <div class="border-2 border-verde rounded-xl p-12">
+                    <h2 class="col-span-3 text-center font-extrabold">Veja o quanto você pode economizar:</h2>
+                    <div class="flex flex-col border border-neutral-300 rounded-xl p-12 shadow-lg">
+                        <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Se o valor da sua conta é:</p>
-                            <p class="m-0">R$ 500</p>
+                            <p class="text-sm mb-1">Se o valor da sua conta é:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 500</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Conta Anual</p>
-                            <p class="m-0">R$ 6.000</p>
+                            <p class="text-sm mb-1">Conta Anual:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 6.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Economia em 20 anos</p>
-                            <p class="m-0">R$ 52.800</p>
+                            <p class="text-sm mb-1">Economia em 20 anos:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 52.800</p>
                         </span>
-                        <span class="flex flex-col mb-6 last:mb-0 mt-16">
-                            <p>Sua economia aplicada a 12% ao ano:</p>
-                            <p class="m-0">R$ 178.179</p>
+                        <span class="flex flex-col mb-6 last:mb-0 mt-8">
+                            <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
+                            <p class="m-0 text-3xl font-extrabold text-verde">R$ 178.179</p>
                         </span>
                     </div>
-                    <div class="border-2 border-verde rounded-xl p-12">
+                    <div class="flex flex-col border border-neutral-300 rounded-xl p-12 shadow-lg">
+                        <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Se o valor da sua conta é:</p>
-                            <p class="m-0">R$ 500</p>
+                            <p class="text-sm mb-1">Se o valor da sua conta é:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 1.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Conta Anual</p>
-                            <p class="m-0">R$ 6.000</p>
+                            <p class="text-sm mb-1">Conta Anual:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 12.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Economia em 20 anos</p>
-                            <p class="m-0">R$ 52.800</p>
+                            <p class="text-sm mb-1">Economia em 20 anos:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 105.600</p>
                         </span>
-                        <span class="flex flex-col mb-6 last:mb-0 mt-16">
-                            <p>Sua economia aplicada a 12% ao ano:</p>
-                            <p class="m-0">R$ 178.179</p>
+                        <span class="flex flex-col mb-6 last:mb-0 mt-8">
+                            <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
+                            <p class="m-0 text-3xl font-extrabold text-verde">R$ 356.358</p>
                         </span>
                     </div>
-                    <div class="border-2 border-verde rounded-xl p-12">
+                    <div class="flex flex-col border border-neutral-300 rounded-xl p-12 shadow-lg">
+                        <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Se o valor da sua conta é:</p>
-                            <p class="m-0">R$ 500</p>
+                            <p class="text-sm mb-1">Se o valor da sua conta é:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 5.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Conta Anual</p>
-                            <p class="m-0">R$ 6.000</p>
+                            <p class="text-sm mb-1">Conta Anual:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 60.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
-                            <p>Economia em 20 anos</p>
-                            <p class="m-0">R$ 52.800</p>
+                            <p class="text-sm mb-1">Economia em 20 anos:</p>
+                            <p class="m-0 text-xl font-extrabold text-azul">R$ 528.000</p>
                         </span>
-                        <span class="flex flex-col mb-6 last:mb-0 mt-16">
-                            <p>Sua economia aplicada a 12% ao ano:</p>
-                            <p class="m-0">R$ 178.179</p>
+                        <span class="flex flex-col mb-6 last:mb-0 mt-8">
+                            <p class="text-sm mb-2">Sua economia aplicada a<br><strong>12%</strong> ao ano:</p>
+                            <p class="m-0 text-3xl font-extrabold text-verde">R$ 1.781.791</p>
                         </span>
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="py-20 bg-neutral-800">
                 <div class="conteudo grid-cols-5">
-                    <div class="col-span-3">
-                        <div>
-                            <p>Serviço Completo:</p>
-                            <ul>
-                                <li>Análise com Drone</li>
-                                <li>Módulo Fotovoltáico</li>
-                                <li>Inversor Solar</li>
-                                <li>Estrutura de Montagem</li>
-                                <li>Sistema de Monitoramento</li>
-                                <li>Cabos e Conectores</li>
-                                <li>Disjuntores e Proteções</li>
-                                <li>QDs e DPs</li>
-                                <li>Serviço de Instalação</li>
-                                <li>Manutenção</li>
+                    <div class="col-span-3 flex flex-col justify-center">
+                        <div class="mb-16">
+                            <p class="text-verde font-extrabold text-2xl mb-6 flex items-center">
+                                <iconify-icon icon="lucide:badge-check" class="text-4xl mr-2 text-verde"></iconify-icon>
+                                Serviço Completo:
+                            </p>
+                            <ul class="grid grid-cols-3 gap-2">
+                                <li class="lp-lista-item">Análise com Drone</li>
+                                <li class="lp-lista-item">Módulo Fotovoltáico</li>
+                                <li class="lp-lista-item">Inversor Solar</li>
+                                <li class="lp-lista-item">Estrutura de Montagem</li>
+                                <li class="lp-lista-item">Sistema de Monitoramento</li>
+                                <li class="lp-lista-item">Cabos e Conectores</li>
+                                <li class="lp-lista-item">Disjuntores e Proteções</li>
+                                <li class="lp-lista-item">QDs e DPs</li>
+                                <li class="lp-lista-item">Serviço de Instalação</li>
+                                <li class="lp-lista-item">Manutenção</li>
                             </ul>
                         </div>
                         <div>
-                            <p>Ideal para diversas atividades:</p>
-                            <ul>
-                                <li>Postos de combutível</li>
-                                <li>GAlpões e fábricas</li>
-                                <li>Empresas</li>
-                                <li>Condomínios e residências</li>
-                                <li>Sistema de monitoramento</li>
-                                <li>Instituições educacionais</li>
-                                <li>Hospitais</li>
-                                <li>Restaurantes e cafeterias</li>
-                                <li>Hotéis e resorts</li>
+                            <p class="text-verde font-extrabold text-2xl mb-6 flex items-center">
+                                <iconify-icon icon="lucide:badge-check" class="text-4xl mr-2 text-verde"></iconify-icon>
+                                Ideal para diversas atividades:
+                            </p>
+                            <ul class="grid grid-cols-3 gap-2">
+                                <li class="lp-lista-item">Postos de combutível</li>
+                                <li class="lp-lista-item">Galpões e fábricas</li>
+                                <li class="lp-lista-item">Empresas</li>
+                                <li class="lp-lista-item">Condomínios e residências</li>
+                                <li class="lp-lista-item">Sistema de monitoramento</li>
+                                <li class="lp-lista-item">Instituições educacionais</li>
+                                <li class="lp-lista-item">Hospitais</li>
+                                <li class="lp-lista-item">Restaurantes e cafeterias</li>
+                                <li class="lp-lista-item">Hotéis e resorts</li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-span-2">
-                        <img class="rounded-lg" src="../assets/img/grande-projetos.png" alt="">
-                        <p>Fale Conosco e veja como funciona!</p>
+                    <div class="col-span-2 flex flex-col justify-center">
+                        <img class="rounded-lg" src="../assets/img/grande-projetos.png" alt="" style="box-shadow:-20px 20px 0 #B3DE00">
                     </div>
+                </div>
+                <div class="conteudo">
+                    <button class="btn w-1/2 mt-20 mx-auto uppercase text-lg shadow-md rounded-lg bg-azul p-6 text-branco font-extrabold">Fale Conosco e veja como funciona!</button>
                 </div>
             </section>
         </main>
